--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -16,6 +16,10 @@
         color: $color_prod_destacados;
     }
 
+    .format-link:hover{
+        text-decoration: underline;
+    }
+
     .icon-red-social{
         font-size: 1.1rem;
         font-family: sans-serif;
