--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -6,6 +6,7 @@ $color_links_header:white;
 $color_body: rgba(233, 148, 21, 0.541);
 $color_prod_destacados:white;
 $color_precio_prod: rgb(0, 110, 255);
+$color_contacto_tran: rgb(125, 172, 233);
 $color_categoiras_destacados:rgba(33, 100, 145, 0.541);
 $color_texto_categoiras_destacados:black;
 
