--- a/css/_body.scss
+++ b/css/_body.scss
@@ -151,6 +151,16 @@
 
     .imgs-productos{
         width: 10rem;
+        position: relative;
+
+        /*display: flex;
+        flex-direction: column;*/
+
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 2fr 0.4fr 0.4fr 0.4fr;
+
+        gap: 0rem;
 
         /*PARA ANIMACION*/
         /* ----------------------------------------------
@@ -168,30 +178,6 @@
         .radio {
             padding: 0%;
             border-radius: 3rem;
-
-            -webkit-animation: shadow-drop-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-                    animation: shadow-drop-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-        }
-
-        @-webkit-keyframes radio {
-            0% {
-            -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-                    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-            }
-            100% {
-            -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-                    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-            }
-        }
-        @keyframes shadow-drop-center {
-            0% {
-            -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-                    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-            }
-            100% {
-            -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-                    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
-            }
         }
 
         .t-prod{
@@ -204,7 +190,69 @@
             color: $color_precio_prod;
             font-weight: 800;
         }
+
+        p{
+            margin: 0rem;
+        }
+
+        .boton-carrito {
+            /*position: absolute;*/
+            /*bottom: 10px;*/
+            /*position: absolute;
+            bottom: 0;*/
+
+            text-align: center;
+            font-weight: 500;
+            width: 100%;
+            padding: 0.15rem;
+            border-radius: 1rem;
+            background-color: rgba(75, 75, 226, 0.473);
+            /*left: 50%;*/
+            /*transform: translateX(-50%);*/
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
     }
+
+    /*.imgs-productos > * {
+        flex: 1;
+    }*/
+
+    .imgs-productos:hover{
+
+        .radio {
+
+            -webkit-animation: shadow-drop-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+                    animation: shadow-drop-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        }
+
+        /*@-webkit-keyframes radio {
+            0% {
+            -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+                    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+            }
+            100% {
+            -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+                    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+            }
+        }*/
+        @keyframes shadow-drop-center {
+            0% {
+            -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+                    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+            }
+            100% {
+            -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+                    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+            }
+        }
+
+        .boton-carrito {
+            opacity: 1;
+        }
+    }
+
 
     @media (max-width:630px){
     
@@ -269,7 +317,7 @@
                 display: flex;
                 flex-wrap: wrap;
                 justify-content:space-around;
-                align-items: center;
+                /*align-items: center;*/
                 gap: 1rem;
                 padding: 1rem 1rem;
                 background-color: $color_prod_destacados;
@@ -306,6 +354,20 @@
 
     /*--------------*******************---------------------*/
 
+
+    /*-------------- pinturas ---------------------*/
+
+    .carrito{
+        background-color: rgba(123, 156, 123, 0.856);
+        border-radius: 2rem;
+        padding: 2rem;
+
+        .input {
+            width: 100%;
+        }
+    }
+
+    /*--------------*******************---------------------*/
     
 
     /*-------------- contacto ---------------------*/
