nueva pagina con carrito

--- a/css/_body.scss
+++ b/css/_body.scss
@@ -350,22 +350,46 @@
         }
     }
 
-    
-
-    /*--------------*******************---------------------*/
-
-
     /*-------------- pinturas ---------------------*/
-
     .carrito{
         background-color: rgba(123, 156, 123, 0.856);
         border-radius: 2rem;
         padding: 2rem;
 
+        .carrito-productos{
+            
+            .prod-carrito{
+                margin: 0.5rem;
+                display: grid;
+                grid-template-columns: 0.5fr 2fr 0.8fr 0.8fr 0.8fr;
+                grid-template-rows: 1fr;
+                gap: 2rem;
+                /*grid-template-areas: 
+                    "menu-compra menu-imag menu-imag menu-imag menu-imag";*/
+                justify-content: space-between;
+                align-items: center;
+
+
+                p{
+                    font-weight: 800;
+                }
+
+                .img-carrito{
+                    border-radius: 2rem;
+
+                }
+            }
+
+            
+        }
+
         .input {
             width: 100%;
         }
     }
+
+    /*--------------*******************---------------------*/
+
 
     /*--------------*******************---------------------*/
     
