--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -120,8 +121,6 @@ header .cabeza {
   }*/
   /*--------------********************--------------------*/
   /*-------------- pinturas/accesorios---------------------*/
-  /*-------------- pinturas ---------------------*/
-  /*--------------*******************---------------------*/
   /*--------------*******************---------------------*/
   /*-------------- contacto ---------------------*/
   /*--------------**********---------------------*/
@@ -352,6 +351,13 @@ header .cabeza {
   height: 50%;
   width: 50%;
 }
+.main .formato-pin-art .menu-compra .inline-inputs {
+  margin-left: 0rem;
+  padding: 0rem 0rem;
+  display: flex; /* Alinear elementos horizontalmente */
+  /*align-items: center;  Centrar verticalmente */
+  gap: 2px; /* Espacio entre elementos */
+}
 .main .formato-pin-art .menu-imag .prod-ventas {
   display: flex;
   flex-wrap: wrap;
@@ -379,31 +385,6 @@ header .cabeza {
     height: 50%;
     width: 50%;
   }
-}
-.main .carrito {
-  background-color: rgba(123, 156, 123, 0.856);
-  border-radius: 2rem;
-  padding: 2rem;
-}
-.main .carrito .carrito-productos .prod-carrito {
-  margin: 0.5rem;
-  display: grid;
-  grid-template-columns: 0.5fr 2fr 0.8fr 0.8fr 0.8fr;
-  grid-template-rows: 1fr;
-  gap: 2rem;
-  /*grid-template-areas: 
-      "menu-compra menu-imag menu-imag menu-imag menu-imag";*/
-  justify-content: space-between;
-  align-items: center;
-}
-.main .carrito .carrito-productos .prod-carrito p {
-  font-weight: 800;
-}
-.main .carrito .carrito-productos .prod-carrito .img-carrito {
-  border-radius: 2rem;
-}
-.main .carrito .input {
-  width: 100%;
 }
 .main .transition-contacto {
   transition: 2s;
@@ -475,6 +456,45 @@ header .cabeza {
   }
 }
 
+/*-------------- pinturas ---------------------*/
+.carrito {
+  padding: 2rem;
+  position: fixed; /* Fijo para que no se desplace */
+  right: 0; /* Alineado a la derecha */
+  top: 0; /* Alineado en la parte superior */
+  width: 50%; /* Ocupa un tercio del ancho */
+  height: 100%; /* Ocupa todo el alto */
+  background: rgba(255, 255, 255, 0.74); /* Color de fondo */
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.3); /* Sombra para destacar */
+  z-index: 1000; /* Asegura que esté por encima de otros elementos */
+  display: none; /* Oculto por defecto */
+}
+.carrito .carrito-productos .prod-carrito {
+  margin: 0.5rem;
+  display: grid;
+  grid-template-columns: 0.5fr 2fr 0.8fr 0.8fr 0.8fr;
+  grid-template-rows: 1fr;
+  gap: 2rem;
+  /*grid-template-areas: 
+      "menu-compra menu-imag menu-imag menu-imag menu-imag";*/
+  justify-content: space-between;
+  align-items: center;
+}
+.carrito .carrito-productos .prod-carrito p {
+  font-weight: 800;
+}
+.carrito .carrito-productos .prod-carrito .img-carrito {
+  border-radius: 2rem;
+}
+.carrito .input {
+  width: 100%;
+}
+
+.carrito.show {
+  display: block; /* Mostrar cuando tenga la clase "show" */
+}
+
+/*--------------*******************---------------------*/
 .footer {
   background-color: #252525;
   color: white;
